FC-1823 #comment Fixed scrolling overflow for wide reports #time 15m

--- a/web/css/fc_styles.css
+++ b/web/css/fc_styles.css
@@ -974,6 +974,15 @@ header nav ul#menu ul {
 		top: 49px
 	}
 	.col-md-5.txtright, .col-md-2.txtright {text-align:left}
+	.table-responsive {
+		width: 100%;
+		margin-bottom: 15px;
+		overflow-x: auto;
+		overflow-y: hidden;
+		-webkit-overflow-scrolling: touch;
+		-ms-overflow-style: -ms-autohiding-scrollbar;
+		border: 1px solid #ddd;
+	}
 
 }
 
